--- a/core/device.html
+++ b/core/device.html
@@ -13,8 +13,8 @@
     <div class="container py-5">
         <form action="/device" method="post">
             <div class="form-group">
-                <label for="nomor">Masukan Nomor:</label>
-                <p class="small text-danger">Format : 6285640431180</p>
+                <label for="nomor">Input your number Whatsapp:</label>
+                <p class="small text-danger">You can use the country code prefix . Example: 6281223xxxx</p>
                 <input type="number" class="form-control" placeholder="Enter number" name="device" id="number" required>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
